# fpl-mcp

./: .gitignore  README.md  pyproject.toml
src/fpl_mcp/: fpl_api.py  official_fpl_fixtures.py  server.py
